After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679505 - Dialog for saving multiple images is too small
Dialog for saving multiple images is too small
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: image viewer
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-06 10:22 UTC by Sebastien Bacher
Modified: 2012-07-06 22:01 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastien Bacher 2012-07-06 10:22:20 UTC
The issue has been reported on https://bugs.launchpad.net/ubuntu/+source/eog/+bug/989311

"When making changes to some images (i.e. rotate the picture to the correct position) the program prompts user for confirmation when he tries to close it.
EOG asks user to confirm the changes he has made to very single picture, exposing a list of the pictures that were modified.

The problem is that the list is costrained into a very tight box, so that the user can only see the first element;

Screenshot:
https://launchpadlibrarian.net/103199179/Schermata%20del%202012-04-26%2012%3A25%3A25.png"
Comment 1 Sebastien Bacher 2012-07-06 10:22:54 UTC
(that's using GNOME 3.4.2)
Comment 2 Felix Riemann 2012-07-06 22:01:16 UTC
Should be back to GNOME2-style again. Will also be part of the 3.4.3 release.

commit aae80252bc61af22621e2a85c417f831da4b00d5
Author: Felix Riemann <>
Date:   Fri Jul 6 23:52:41 2012 +0200

    EogCloseConfirmationDialog: Fix size request for the image list
    
    Change the size request of the encasing ScrolledWindow instead of the
    TreeView itself. Otherwise the list would hardly show one row.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=679505
---
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.