EogCloseConfirmationDialog: Fix size request for the image list

Change the size request of the encasing ScrolledWindow instead of the
TreeView itself. Otherwise the list would hardly show one row.

https://bugzilla.gnome.org/show_bug.cgi?id=679505